Ajustes al yml v12

--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -12,7 +12,7 @@ jobs:
           uses: SamKirkland/FTP-Deploy-Action@v4.3.4
           with:
             server: ftpupload.net
-            username: ${{ secrets.USER_NAME }}
+            username: if0_35607821
             password: ${{ secrets.PASSWORD }}
             server-dir: "/tandem/"
             local-dir: "./tandem"
