--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -8,6 +8,10 @@ jobs:
         steps:
         - name: Get Latest Code
           uses: actions/checkout@v3
+        - name: Modified files
+          id: changed-files
+          run: |
+              echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
         - name: FTP Deployer
           uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
           with:
@@ -16,4 +20,4 @@ jobs:
             ftp_password: ${{ secrets.PASSWORD }}
             local_source_dir: "tandem"
             dist_target_dir: "tandem"
-            delete: "true"
+            delete: "false"
