--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -15,9 +15,9 @@ jobs:
             - name: Get changed files
               id: changes
               run: |
-                 echo "::set-output name=src::$(git diff --name-only --diff-filter=SR | xargs)"
-                 echo "::set-output name=dic::$(git diff --name-only --diff-filter=DI | xargs)"
-                 echo "::set-output name=lbr::$(git diff --name-only --diff-filter=LM | xargs)"
+                 echo "::set-output name=src::$(git diff --name-only --diff-filter=ACMRT | grep SR* | xargs)"
+                 echo "::set-output name=dic::$(git diff --name-only --diff-filter=ACMRT | grep DI* | xargs)"
+                 echo "::set-output name=lbr::$(git diff --name-only --diff-filter=ACMRT | grep LM* | xargs)"
     build:
         runs-on: ubuntu-latest
         needs: changedfiles
