--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -20,9 +20,9 @@ jobs:
                  echo "::set-output name=lbr::$(git diff --name-only --diff-filter=ACMRT | grep LM* | xargs)"
             - name: List changed files
               run: |
-                 echo ${{changedfiles.outputs.src}}
-                 echo ${{changedfiles.outputs.dic}}
-                 echo ${{changedfiles.outputs.frm}}
+                 echo ${{outputs.src}}
+                 echo ${{outputs.dic}}
+                 echo ${{outputs.frm}}
     build:
         runs-on: ubuntu-latest
         needs: changedfiles
