--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -16,9 +16,9 @@ jobs:
                  echo "TANDEM_LBR=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.before }} ${{ github.event.after }} | grep LM* | xargs)" >> $GITHUB_ENV
             - name: List changed files
               run: |
-                 echo ${{ env.TANDEM_SRC }}
-                 echo ${{ env.TANDEM_DIC }}
-                 echo ${{ env.TANDEM_LBR }}
+                 echo "Servidores: ${{ steps.changes.outputs.TANDEM_SRC }}"
+                 echo "Diccinarios: ${{ steps.changes.outputs.TANDEM_DIC }}"
+                 echo "Librerias: ${{ steps.changes.outputs.TANDEM_LBR }}"
     build:
         runs-on: ubuntu-latest
         needs: changedfiles
