--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -12,21 +12,15 @@ jobs:
         steps:
             - name: Get Latest Code
               uses: actions/checkout@v3
-            - name: Get changed files
-              id: changes
-              run: |
-                 echo "::set-output name=src::$(git diff --name-only --diff-filter=ACMRT main~ main | grep "tandem/SRC/SR*")"
-                 echo "::set-output name=dic::$(git diff --name-only --diff-filter=ACMRT main~ main | grep "tandem/DIC/DI*")"
-                 echo "::set-output name=lbr::$(git diff --name-only --diff-filter=ACMRT main~ main | grep "tandem/LBR/LM*")"
-            - name: List changed files
-              run: |
-                 echo "Servidores: ${{ steps.changes.outputs.src }}"
-                 echo "Diccinarios: ${{ steps.changes.outputs.dic }}"
-                 echo "Librerias: ${{ steps.changes.outputs.lbr }}"
+            - uses: yumemi-inc/changed-files@v3
+              id: changed_src
+              with:
+              patterns: |
+                **/*/SR*
     put_src:
         runs-on: ubuntu-latest
         needs: changedfiles
-        if: ${{needs.changedfiles.outputs.src}}
+        if: ${{needs.changedfiles.steps.changed_src.outputs.files}}
         steps:
         - name: Get Latest Code
           uses: actions/checkout@v3
