Ajustes al yml - Cambio forma valirables 5

--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -16,7 +16,7 @@ jobs:
               id: changed_src
               with:
                 patterns: |
-                   **/*/SR*
+                   tandem/src/SR*
     put_src:
         runs-on: ubuntu-latest
         needs: changedfiles
