Ajustes al yml - Cambio forma valirables 6

--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -17,6 +17,11 @@ jobs:
               with:
                 patterns: |
                    tandem/src/SR*
+            - run: |
+                for file in ${{ steps.changed.outputs.files }}; do
+                  # do somethihg..
+                  echo "$file"
+                done
     put_src:
         runs-on: ubuntu-latest
         needs: changedfiles
