--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -15,14 +15,14 @@ jobs:
             - uses: yumemi-inc/changed-files@v3
               id: changed_src
             - run: |
-                for file in ${{ steps.changed.outputs.files }}; do
+                for file in ${{ steps.changed_src.outputs.files }}; do
                   # do somethihg..
                   echo "$file"
                 done
     put_src:
         runs-on: ubuntu-latest
-        needs: changedfiles
-        if: ${{needs.changedfiles.steps.changed_src.outputs.files}}
+        needs: changed_src
+        if: ${{needs.changed_src.outputs.files}}
         steps:
         - name: Get Latest Code
           uses: actions/checkout@v3
