--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -14,6 +14,9 @@ jobs:
               uses: actions/checkout@v3
             - uses: yumemi-inc/changed-files@v3
               id: changed_src
+              with:
+                patterns: |
+                    tandem/src/SR*
             - run: |
                 for file in ${{ steps.changed_src.outputs.files }}; do
                   # do somethihg..
