--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -25,7 +25,7 @@ jobs:
     put_src:
         runs-on: ubuntu-latest
         needs: changedfiles
-        if: ${{needs.changedfiles.steps.changed_src.outputs.files}}
+        if: ${{needs.changedfiles.outputs.files}}
         steps:
         - name: Get Latest Code
           uses: actions/checkout@v3
