--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -23,21 +23,16 @@ jobs:
                   echo "$file"
                 done
             - name: put_src
-              runs-on: ubuntu-latest
-              needs: changedfiles
+              needs: changed_src
               if: ${{steps.changed_src.outputs.files}}
-              steps:
-              - name: Get Latest Code
-                uses: actions/checkout@v3
-              - name: FTP Deployer
-                uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
-                with:
-                    ftp_host: ${{ secrets.HOST_NAME }}
-                    ftp_username: ${{ secrets.USER_NAME }}
-                    ftp_password: ${{ secrets.PASSWORD }}
-                    local_source_dir: "tandem/src"
-                    dist_target_dir: "tandem/src"
-                    delete: "false"
+              uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
+              with:
+                ftp_host: ${{ secrets.HOST_NAME }}
+                ftp_username: ${{ secrets.USER_NAME }}
+                ftp_password: ${{ secrets.PASSWORD }}
+                local_source_dir: "tandem/src"
+                dist_target_dir: "tandem/src"
+                delete: "false"
     put_dic:
         runs-on: ubuntu-latest
         needs: changedfiles
