--- a/.github/workflows/deploy_bo.yml
+++ b/.github/workflows/deploy_bo.yml
@@ -5,10 +5,6 @@ on:
 jobs:
     changedfiles:
         runs-on: ubuntu-latest
-        outputs:
-            src: ${{ steps.changes.outputs.src}}
-            dic: ${{ steps.changes.outputs.dic}}
-            lbr: ${{ steps.changes.outputs.lbr}}
         steps:
             - name: Get Latest Code
               uses: actions/checkout@v3
@@ -22,6 +18,26 @@ jobs:
                   # do somethihg..
                   echo "$file"
                 done
+            - uses: yumemi-inc/changed-files@v3
+              id: changed_dic
+              with:
+                patterns: |
+                    **/DI*
+            - run: |
+                for file in ${{ steps.changed_dic.outputs.files }}; do
+                  # do somethihg..
+                  echo "$file"
+                done
+            - uses: yumemi-inc/changed-files@v3
+              id: changed_lbr
+              with:
+                patterns: |
+                    **/LM*
+            - run: |
+                for file in ${{ steps.changed_lbr.outputs.files }}; do
+                  # do somethihg..
+                  echo "$file"
+                done
             - name: put_src
               if: ${{steps.changed_src.outputs.files}}
               uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
@@ -32,36 +48,23 @@ jobs:
                 local_source_dir: "tandem/SRC"
                 dist_target_dir: "tandem/SRC"
                 delete: "false"
-    put_dic:
-        runs-on: ubuntu-latest
-        needs: changedfiles
-        if: ${{needs.changedfiles.outputs.dic}}
-        steps:
-        - name: Get Latest Code
-          uses: actions/checkout@v3
-        - name: FTP Deployer
-          uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
-          with:
-            ftp_host: ${{ secrets.HOST_NAME }}
-            ftp_username: ${{ secrets.USER_NAME }}
-            ftp_password: ${{ secrets.PASSWORD }}
-            local_source_dir: "tandem/dic"
-            dist_target_dir: "tandem/dic"
-            delete: "false"
-
-    put_lbr:
-        runs-on: ubuntu-latest
-        needs: changedfiles
-        if: ${{needs.changedfiles.outputs.lbr}}
-        steps:
-        - name: Get Latest Code
-          uses: actions/checkout@v3
-        - name: FTP Deployer
-          uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
-          with:
-            ftp_host: ${{ secrets.HOST_NAME }}
-            ftp_username: ${{ secrets.USER_NAME }}
-            ftp_password: ${{ secrets.PASSWORD }}
-            local_source_dir: "tandem/lbr"
-            dist_target_dir: "tandem/lbr"
-            delete: "false"
+            - name: put_dic
+              if: ${{steps.changed_dic.outputs.files}}
+              uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
+              with:
+                ftp_host: ${{ secrets.HOST_NAME }}
+                ftp_username: ${{ secrets.USER_NAME }}
+                ftp_password: ${{ secrets.PASSWORD }}
+                local_source_dir: "tandem/DIC"
+                dist_target_dir: "tandem/DIC"
+                delete: "false"
+            - name: put_lbr
+              if: ${{steps.changed_lbr.outputs.files}}
+              uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
+              with:
+                ftp_host: ${{ secrets.HOST_NAME }}
+                ftp_username: ${{ secrets.USER_NAME }}
+                ftp_password: ${{ secrets.PASSWORD }}
+                local_source_dir: "tandem/LBR"
+                dist_target_dir: "tandem/LBR"
+                delete: "false"
